--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: marvel_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: ">=3.3.3 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,10 +41,11 @@ dependencies:
   fast_immutable_collections: ^10.1.2
   json_annotation: ^4.8.1
   crypto: ^3.0.3
-  kiwi: ^4.1.0
   html: ^0.15.4
   path: ^1.8.3
-  
+  get_it: ^7.7.0
+  injectable: ^2.4.2
+  injectable_generator: ^2.6.1
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +59,8 @@ dev_dependencies:
   flutter_gen_runner: ^5.4.0
   retrofit_generator: ^8.1.0
   dynamic_config_generator: ^0.4.0
-  kiwi_generator: ^4.1.0
-  analyzer: ^5.13.0
-
+  integration_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
